5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1745_1529.log
== TEST (2019-05-15 14:11:52) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

while (qi = 25.000 + qc = 25.000)
-- ERROR:
File "XXXX", line 6
    while (qi = 25.000 + qc = 25.000)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:13:39) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc )

-- ERROR:
File "XXXX", line 9
    while ( qi + qc )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:03) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc ):

-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:14:10) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc ):
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:15:05) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc ):
-- EXECUTION TIME:
0.226486
-- ERROR:
  File "/home/codebench/codes/1745/1529/main.py", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:17) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc ):
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:31:24) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc )
-- ERROR:
File "XXXX", line 9
    while ( qi + qc )
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:32:36) 
-- CODE:
qi = int(input("Quantidade de guerreiros na infrantaria: "))
qc = int(input("Quantidade de guerreiros na cavalaria: "))
pi = float(input("Percentual mensal de crescimento da tropa de infantaria: "))
pc = float(input("Percentual mensal de crescimento da tropa de cavalaria: "))

qi = 25.000
qc = 25.000

while ( qi + qc == )
-- EXECUTION TIME:
0.179927
-- ERROR:
  File "/home/codebench/codes/1745/1529/main.py", line 9
    while ( qi + qc == )
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
